Updated meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hi! My name is Nathan Weiland and I am a student at Wright State University. I work as a teaching assistant and enjoy making games using Unity.">
   <meta name="author" content="Nathan Weiland">
-  <meta name="keywords" content="nathan weiland, java, c#, wright state, unity, teaching, game design, game development">
+  <meta name="keywords" content="Nathan Weiland, Nathan, Weiland, Java, C#, Wright State, Unity, Teaching, Game design, Game development">
+  <meta name="theme-color" content="#BA68C8">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.nathanweiland.com/">
+  <meta name="og:site_name" content="Nathan Weiland">
+  <meta property="og:title" content="Nathan Weiland">
+  <meta property="og:description" content="Hi! My name is Nathan Weiland and I am a student at Wright State University. I work as a teaching assistant and enjoy making games using Unity.">
+  <meta property="og:image" content="https://nathanw1010.github.io/nweiland-website/assets/images/portrait-lg-compressed.jpg">
+  <meta property="og:image:alt" content="Nathan Weiland">
+  <meta property="og:keywords" content="Nathan Weiland, Nathan, Weiland, Java, C#, Wright State, Unity, Teaching, Game design, Game development">
 </head>
 <body>
   <app-root></app-root>
